# ChangeLog for x11-plugins/wmmemmon
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmemmon/ChangeLog,v 1.15 2006/01/31 19:52:24 nelchael Exp $

  31 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmmemmon-1.0.1.ebuild:
  Fixed DEPEND for modular X.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> wmmemmon-1.0.1.ebuild:
  Mark 1.0.1 stable on alpha

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> wmmemmon-1.0.1.ebuild:
  Stable on ppc64

  05 Feb 2005; Bryan Østergaard <kloeri@gentoo.org> wmmemmon-1.0.1.ebuild:
  ~alpha keyword, bug 78660.

  23 Dec 2004; Markus Rothe <corsair@gentoo.org> wmmemmon-1.0.1.ebuild:
  Added ~ppc64 to KEYWORDS; bug #74952

  02 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  wmmemmon-1.0.1.ebuild:
  Masked wmmemmon-1.0.1.ebuild stable for ppc

  03 Jul 2004; Michele Noberasco <s4t4n@gentoo.org> wmmemmon-0.7.0.ebuild:
  Remove old ebuilds...

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> wmmemmon-0.7.0.ebuild,
  wmmemmon-1.0.1.ebuild:
  glibc -> libc

  13 Apr 2004; Don Seiler <rizzo@gentoo.org>; wmmemmon-0.7.0.ebuild,
  wmmemmon-1.0.1.ebuild:
  Changed dependency to virtual/x11 to work with x11-base/xorg-x11

*wmmemmon-1.0.1 (16 Oct 2003)

  16 Oct 2003; Nick Hadaway <raker@gentoo.org> wmmemmon-1.0.1.ebuild:
  Version bump.  A fix for 2.6 kernels among other things.  See bug 
  #25475

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*wmmemmon-0.7.0 (04 Oct 2002)

  04 Oct 2002; Nick Hadaway <raker@gentoo.org> wmmemmon-0.7.0.ebuild,
  files/digest-wmmemmon-0.7.0 :
  Initial adding of ebuild to portage.