@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmmemmon
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmemmon/ChangeLog,v 1.15 2006/01/31 19:52:24 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmemmon/ChangeLog,v 1.16 2006/07/17 10:22:02 s4t4n Exp $
+
+  17 Jul 2006; Michele Noberasco <s4t4n@gentoo.org> wmmemmon-1.0.1.ebuild:
+  Fixed HOMEPAGE and SRC_URI. Closes bug #140294.
 
   31 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmmemmon-1.0.1.ebuild:
   Fixed DEPEND for modular X.
